JumpScript/tests/baselines/reference/binaryArithmatic4.errors.txt
tests/cases/compiler/binaryArithmatic4.jump(1,9): error TS2531: Object is possibly 'null'.
tests/cases/compiler/binaryArithmatic4.jump(1,16): error TS2531: Object is possibly 'null'.


==== tests/cases/compiler/binaryArithmatic4.jump (2 errors) ====
    var v = null | null;
            ~~~~
!!! error TS2531: Object is possibly 'null'.
                   ~~~~
!!! error TS2531: Object is possibly 'null'.